--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
             </div>
         </div>
         <div class="funcoes_menu">
-            <input type="button" name="PC" id="id_menu">
-            <input type="button" name="browser" id="browser_menu">
-            <input type="button" name="all" id="all_menu">
-            <input type="button" name="favoritos" id="fav_menu">
-            
+            <button class="btn">PC</button>
+            <button class="btn">Browser</button>
+            <button class="btn">ALL</button>
+            <button class="btn">favoritos</button>
         </div>
     </div>
     
