fazendo estrutura body

--- a/Home/home.html
+++ b/Home/home.html
@@ -40,6 +40,30 @@
             </div>
         </div>
     </header>
+    <div class="corpo1">
+        <div class="tela_inicial">
+
+            <img src="../Capturar.PNG" alt="bf4">
+
+        </div>
+
+
+    </div>
+    <div class="corpo2">
+        <h2 class="titulos">GAMES</h2>
+
+        <button class="botao_seemore">see more</button>
+        <div class="games">
+
+
+
+        </div>
+
+
+
+
+    </div>
+
     
 </body>
 </html>
