--- a/teste/teste.html
+++ b/teste/teste.html
@@ -71,6 +71,19 @@
     </ul>
   </nav>
 
+  <section>
+    <div>
+        <img class="img_grande" src="../bateflied.png" alt="">
+    </div>
+    <div class="imagens">
+        <img  class="anao" src="../anaorebaixado1.jpeg" alt="">
+        <img class="anao" src="../anaorebaixado2.jpeg" alt="">
+        <img class="anao" src="../anaorebaixado3.jpeg" alt="">
+        <img class="anao" src="../anaorebaixado4.jpeg" alt="">
+        <img class="anao" src="../anaorebaixado5.jpeg" alt="">
+    </div>
+  </section>
+
 </body>
 
 </html>
