sincronizando com API

--- a/teste/teste.html
+++ b/teste/teste.html
@@ -2,88 +2,86 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <!-- CSS only -->
-  <link rel="stylesheet" href="teste.css">
+    <script src="teste.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatiblse" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>document</title>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="teste.css">
 </head>
 
 <body>
 
-  <header>
-            <div class="conteudo">
-                  <img src="../logo8BIT.png" alt="" class="logo">
-            </div>
-            <div>
-                  <ul class="navigation">
-                    <li><a href="#">Pc</a></li>
-                    <li><a href="#">Browser</a></li>
-                    <li><a href="#">All</a></li>
-                    <li><a href="#">Favoritos</a></li>
-                  </ul>
-          </div>
-          <div class="search">
+    <header>
+        <div class="conteudo">
+            <img src="../logo8BIT.png" alt="" class="logo">
+        </div>
+        <div>
+            <ul class="navigation">
+                <li><a href="#">Pc</a></li>
+                <li><a href="#">Browser</a></li>
+                <li><a href="#">All</a></li>
+                <li><a href="#">Favoritos</a></li>
+            </ul>
+        </div>
+        <div class="search">
             <input type="text" placeholder="Search">
-            <img  class="fa-search" src="../lupa copiar.png" alt="">
-          </div>
-  </header>
+            <img class="fa-search" src="../lupa copiar.png" alt="">
+        </div>
+    </header>
 
-  <nav>
-    <ul>
-      <li>
-        <div class="home-icon">
-          <img src="../home.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="pvp-icon">
-          <img src="../pvp.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="mmofps-icon">
-          <img src="../mmofps.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="survival-icon">
-          <img src="../survival.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="card-icon">
-          <img src="../card.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="fighting-icon">
-          <img src="../fighting.png" alt="">
-        </div>
-      </li>
-      <li>
-        <div class="shoting-icon">
-          <img src="../gun.png" alt="">
-        </div>
-      </li>
+    <nav>
+        <ul>
+            <li>
+                <div class="home-icon">
+                    <img src="../home.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="pvp-icon">
+                    <img src="../pvp.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="mmofps-icon">
+                    <img src="../mmofps.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="survival-icon">
+                    <img src="../survival.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="card-icon">
+                    <img src="../card.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="fighting-icon">
+                    <img src="../fighting.png" alt="">
+                </div>
+            </li>
+            <li>
+                <div class="shoting-icon">
+                    <img src="../gun.png" alt="">
+                </div>
+            </li>
 
-    </ul>
-  </nav>
+        </ul>
+    </nav>
 
-  <section>
-    <div>
-        <img class="img_grande" src="../bateflied.png" alt="">
-    </div>
-    <div class="imagens">
-        <img  class="anao" src="../anaorebaixado1.jpeg" alt="">
-        <img class="anao" src="../anaorebaixado2.jpeg" alt="">
-        <img class="anao" src="../anaorebaixado3.jpeg" alt="">
-        <img class="anao" src="../anaorebaixado4.jpeg" alt="">
-        <img class="anao" src="../anaorebaixado5.jpeg" alt="">
-    </div>
-  </section>
+    <section id="games">
+        <div id="destaque">
+            <img class="img_grande" src="../bateflied.png" alt="">
+        </div>
+        <div id="jogos" class="jogos">
+
+        </div>
+    </section>
 
 </body>
+
 
 </html>
