--- a/teste/teste.html
+++ b/teste/teste.html
@@ -9,10 +9,10 @@
     <title>document</title>
     <!-- CSS only -->
     <link rel="stylesheet" href="teste.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> 
 </head>
 
 <body>
-
     <header>
         <div class="conteudo">
             <img src="../logo8BIT.png" alt="" class="logo">
@@ -73,14 +73,15 @@
     </nav>
 
     <section id="games">
-        <div id="destaque">
-            <img class="img_grande" src="../bateflied.png" alt="">
-        </div>
-        <div id="jogos" class="jogos">
-
+        <div class="center">
+            <div id="destaque">
+                <img class="img_grande" src="../bateflied.png" alt="">
+            </div>
+                <div id="jogos" class="jogos">
+                </div>
+                <button class="botao_carregar">Carregar Mais</button>
         </div>
     </section>
-
 </body>
 
 
