--- a/teste/teste.html
+++ b/teste/teste.html
@@ -25,10 +25,12 @@
                 <li><a href="#">Favoritos</a></li>
             </ul>
         </div>
+
         <div class="search">
-            <input type="text" placeholder="Search">
+            <input class="search-in" type="text" placeholder="Search">
             <img class="fa-search" src="../lupa copiar.png" alt="">
         </div>
+
     </header>
 
     <nav>
