--- a/teste/teste.html
+++ b/teste/teste.html
@@ -26,7 +26,7 @@
             </ul>
         </div>
         <div class="search">
-            <input type="text" placeholder="Search">
+            <input class="search" type="text" placeholder="Search">
             <img class="fa-search" src="../lupa copiar.png" alt="">
         </div>
     </header>
@@ -68,6 +68,12 @@
                     <img src="../gun.png" alt="">
                 </div>
             </li>
+            <li>
+                <div class="mundo-icon">
+                    <img class="mundo" src="../mundo.png" alt="">
+                </div>
+            </li>
+
 
         </ul>
     </nav>
