--- a/teste2/teste.html
+++ b/teste2/teste.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    
-    <div class="estrelas">
-        <div id="login"><input  class="btn" type="button" name="fb" value="" />
-        <label for="cm_star-1"><i class="btn"></i></label></div>
-      </div>
 
+    <div class="estrelas">
+        <div id="login">
+        <label for="cm_star-1"><i class="dourado"></i>
+            <input  type="radio" class="dourado" name="fb" value="" checked/>
+        </label></div>
+      </div>
     <script src="teste.js"></script>
 </body>
 </html>
