--- a/teste/teste.html
+++ b/teste/teste.html
@@ -33,22 +33,22 @@
 
     <nav>
         <ul>
-            <li>
-                <div class="home-icon">
+            <li id="home">
+                <divclass="home-icon">
                     <img src="../home.png" alt="">
-                </div>
+                    </div>
             </li>
-            <li>
+            <li id="pvp">
                 <div class="pvp-icon">
                     <img src="../pvp.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="mmofps">
                 <div class="mmofps-icon">
                     <img src="../mmofps.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="survival">
                 <div class="survival-icon">
                     <img src="../survival.png" alt="">
                 </div>
@@ -77,7 +77,6 @@
             <img class="img_grande" src="../bateflied.png" alt="">
         </div>
         <div id="jogos" class="jogos">
-
         </div>
     </section>
 
