--- a/teste4/index.html
+++ b/teste4/index.html
@@ -18,10 +18,8 @@
   <div class="user-cards" data-user-cards-container></div>
 
   <template data-user-template>
-
-    
     <div class="card">
-      <div class="header" data-header></div>
+      <div id="games" class="header" data-header></div>
       <div class="body" data-body></div>
     </div>
 
