--- a/teste/teste.html
+++ b/teste/teste.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="teste.js"></script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiblse" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,42 +35,42 @@
 
     <nav>
         <ul>
-            <li id="home">
-                <divclass="home-icon">
+            <li id="home" onclick="selecionar_categoria(home);">
+                <div class="home-icon">
                     <img src="../home.png" alt="">
-                    </div>
+                </div>
             </li>
-            <li id="pvp">
+            <li id="pvp" onclick="selecionar_categoria(pvp);">
                 <div class="pvp-icon">
                     <img src="../pvp.png" alt="">
                 </div>
             </li>
-            <li id="mmofps">
+            <li id="mmofps" onclick="selecionar_categoria(mmofps);">
                 <div class="mmofps-icon">
                     <img src="../mmofps.png" alt="">
                 </div>
             </li>
-            <li id="survival">
+            <li id="survival" onclick="selecionar_categoria(survival);">
                 <div class="survival-icon">
                     <img src="../survival.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="card" onclick="selecionar_categoria(card);">
                 <div class="card-icon">
                     <img src="../card.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="fighting" onclick="selecionar_categoria(fighting);">
                 <div class="fighting-icon">
                     <img src="../fighting.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="shooter" onclick="selecionar_categoria(shooter);">
                 <div class="shoting-icon">
                     <img src="../gun.png" alt="">
                 </div>
             </li>
-            <li>
+            <li id="open-world" onclick="selecionar_categoria(world);">
                 <div class="mundo-icon">
                     <img class="mundo" src="../mundo.png" alt="">
                 </div>
@@ -84,7 +84,7 @@
 
         <div class="center">
             <div id="destaque">
-                <img class="img_grande" src="../bateflied.png" alt="">
+
             </div>
             <div id="jogos" class="jogos">
             </div>
@@ -96,3 +96,5 @@
 
 
 </html>
+
+<script src="teste.js"></script>
