--- a/teste/teste.html
+++ b/teste/teste.html
@@ -91,7 +91,7 @@
             </div>
             <div id="jogos" class="jogos">
             </div>
-            <button class="botao_carregar">Carregar Mais</button>
+            <button id="carregar" class="botao_carregar" onclick=" carregar_mais()">Carregar Mais</button>
 
         </div>
     </section>
