--- a/teste/teste.html
+++ b/teste/teste.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatiblse" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +12,7 @@
 </head>
 
 <body>
+    <script src="https://kit.fontawesome.com/95a02bd20d.js"></script>
     <header>
         <div class="conteudo">
             <img src="../logo8BIT.png" alt="" class="logo">
@@ -30,15 +30,11 @@
             <input class="search" type="text" placeholder="Search">
             <img class="fa-search" src="../lupa copiar.png" alt="">
         </div>
-
     </header>
 
     <nav>
         <ul>
-
             <li id="home" onclick="selecionar_categoria(home);">
-
-
                 <div class="home-icon">
                     <img src="../home.png" alt="">
                 </div>
@@ -78,8 +74,6 @@
                     <img class="mundo" src="../mundo.png" alt="">
                 </div>
             </li>
-
-
         </ul>
     </nav>
 
@@ -95,9 +89,7 @@
 
         </div>
     </section>
+
+    <script src="teste.js"></script>
 </body>
-
-
 </html>
-
-<script src="teste.js"></script>
