filtro por plataforma

--- a/teste/teste.html
+++ b/teste/teste.html
@@ -19,9 +19,9 @@
         </div>
         <div>
             <ul class="navigation">
-                <li><a href="#">Pc</a></li>
-                <li><a href="#">Browser</a></li>
-                <li><a href="#">All</a></li>
+                <li onclick="plataformas('pc')"><a id="pc" href="#">Pc</a></li>
+                <li onclick="plataformas('browser')"><a id="browser" href="#">Browser</a></li>
+                <li onclick="plataformas('all')"><a id="all" href="#">All</a></li>
                 <li><a href="#">Favoritos</a></li>
             </ul>
         </div>
@@ -92,4 +92,5 @@
 
     <script src="teste.js"></script>
 </body>
+
 </html>
