--- a/teste4/index.html
+++ b/teste4/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-  <div class="search-wrapper">
+  <div class="search">
     <label for="search">Search Users</label>
-    <input type="search" id="search" data-search>
+    <input type="text" id="search_id" data-search>
   </div>
 
   <div class="user-cards" data-user-cards-container></div>
@@ -22,7 +22,7 @@
       <div id="games" class="header" data-header></div>
       <div class="body" data-body></div>
     </div>
-
   </template>
+
 </body>
 </html>
