--- a/teste3/index.html
+++ b/teste3/index.html
@@ -9,15 +9,11 @@
 </head>
 <body>
    
-    <div class="bod">
-        <div class="row">
-            <label for="search">search games</label>
-            <input id="searchInput" class="search-in" type="text" placeholder="search here">
-        </div>
-    </div>
- 
-    <div id="games"></div> 
-
+<div class="imagem_game" >
+    <video class="imagem_grande" autoplay="autoplay">
+        <source src="https://www.freetogame.com/g/110/videoplayback.webm" alt="imagem grande" type="video/webm">
+    </video>
+</div>
     <script src="index.js" defer ></script>
 </body>
 </html>
