--- a/teste/teste.html
+++ b/teste/teste.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>document</title>
     <!-- CSS only -->
+    <script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="teste.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
@@ -43,22 +44,22 @@
             </li>
             <li id="pvp" onclick="selecionar_categoria(pvp);">
                 <div class="pvp-icon">
-                    <img src="../pvp.png" alt="">
+                    <img class="pvp" src="../pvp.png" alt="">
                 </div>
             </li>
             <li id="mmofps" onclick="selecionar_categoria(mmofps);">
                 <div class="mmofps-icon">
-                    <img src="../mmofps.png" alt="">
+                    <img class="mmofps" src="../mmofps.png" alt="">
                 </div>
             </li>
             <li id="survival" onclick="selecionar_categoria(survival);">
                 <div class="survival-icon">
-                    <img src="../survival.png" alt="">
+                    <img class="survival" src="../survival.png" alt="">
                 </div>
             </li>
             <li id="card" onclick="selecionar_categoria(card);">
                 <div class="card-icon">
-                    <img src="../card.png" alt="">
+                    <img class="carta" src="../card.png" alt="">
                 </div>
             </li>
             <li id="fighting" onclick="selecionar_categoria(fighting);">
