--- a/teste/teste.html
+++ b/teste/teste.html
@@ -30,8 +30,8 @@
         <div class="search">
             <input class="search" id="search_id" type="text" placeholder="Search" data-search>
             <img class="fa-search" src="../lupa copiar.png" alt="">
-
         </div>
+        <button onclick="remove()">X</button>
     </header>
 
     <nav>
