--- a/teste/teste.html
+++ b/teste/teste.html
@@ -28,10 +28,10 @@
         </div>
 
         <div class="search">
-            <input class="search" id="search_id" type="text" placeholder="Search" data-search>
+            <input class="search" id="search_id" type="text" type="reset" placeholder="Search" data-search>
             <img class="fa-search" src="../lupa copiar.png" alt="">
         </div>
-        <button onclick="remove()">X</button>
+        <button onclick="remove()">❌</button>
     </header>
 
     <nav>
