--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <title>document</title>
     <!-- CSS only -->
     <script src="https://code.jquery.com/jquery-3.6.2.js" integrity="sha256-pkn2CUZmheSeyssYw3vMp1+xyub4m+e+QK4sQskvuo4=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="teste.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
@@ -89,7 +89,7 @@
                             <div class="card jogo">
                             <div id="games" class="header" data-header></div>
                         </div>
-                    </template>
+                  </template>
             </div>
 
             <div class="user-cards" data-user-cards-container></div>
@@ -102,6 +102,6 @@
     </section>
 </body>
 
-<script src="teste.js"></script>
+<script src="index.js"></script>
 
 </html>
